--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
-.container {
-    width: 200px;
-    height: 200px;
-  }
+html {
+  scroll-behavior: ;
+}
 
   p {
     text-indent: 50px;
@@ -34,11 +33,25 @@
   }
   
   .active {
-    background-color: #000000; 
-    color: rgb(0, 0, 0);
+    background-color: rgb(219, 3, 3); 
+    color: rgb(255, 0, 0);
     border-radius: 5px;
   }
   
+  
+::-webkit-scrollbar {
+  width: 12px; /* Width of the scrollbar */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #3a26e7; /* Color of the thumb (the draggable part) */
+  border-radius: 6px; /* Rounded corners */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #74ff52; /* Color of the thumb on hover */
+}
+
   
 li:hover {
     background-color: #252525;
@@ -48,7 +61,7 @@ li:hover {
  
   .bar {
     overflow: hidden;
-    background-color: rgba(122, 65, 255, 0.5);
+    background-color: rgba(61, 61, 61, 0.5);
     position: -webkit-sticky; /* Safari */
     position: sticky;
     z-index: 999;
@@ -62,7 +75,7 @@ li:hover {
 
   .back {
 
-    background: linear-gradient(#281a64,#000000);
+    background: linear-gradient(#000000,#000000);
   }
 
   .animated-image {
