--- a/style.css
+++ b/style.css
@@ -48,7 +48,8 @@ html {
   .scalehover:hover{
     transform: scale(1.2);
     box-shadow:  0 10px 5px rgba(75, 255, 240, 0.5);
-    background-color: #52a3ff;
+    background-color: #52c0ff;
+    border-radius: 800px;
   }
   
   .active {
