--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ html {
     transition: all 0.3s ease-in-out;
   }
 
+  .nav-item:hover {
+    background-color: #d61111;
+  }
+
   .scalehover:hover{
     transform: scale(1.2);
     box-shadow:  0 10px 5px rgba(75, 255, 240, 0.5);
