--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ html {
     border-radius: 20px;
   }
 
+  .shad {
+    filter: drop-shadow(16px 12px 2px #00000080) brightness(1.1);
+  }
+
   .scalehover {
     -webkit-transition: all 0.3s ease-in-out;
     -moz-transition: all 0.3s ease-in-out;
